--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="">
-<meta name="description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georiga, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD." />
+<meta name="description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georgia, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD." />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
@@ -39,18 +39,18 @@
 
 
 <meta itemprop="name" content="About me">
-<meta itemprop="description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georiga, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.">
+<meta itemprop="description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georgia, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.">
 
 <meta itemprop="wordCount" content="861">
 <meta itemprop="keywords" content="" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About me"/>
-<meta name="twitter:description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georiga, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD."/>
+<meta name="twitter:description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georgia, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD."/>
 
 
 
     <meta property="og:title" content="About me" />
-<meta property="og:description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georiga, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD." />
+<meta property="og:description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georgia, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://manojsapkota.github.io/hobbies/" /><meta property="article:section" content="" />
 
@@ -140,7 +140,7 @@
          alt="banner" width="100%"/>
 </figure>
 
-<p>I am <strong>Manoj Sapkota</strong>, a PhD candidate in the <a href="https://plantbreeding.caes.uga.edu/">Institute of Plant Breeding, Genetics, and Genomics</a> at the University of Georiga, Athens, GA, US. I am a member of <a href="https://vanderknaaplab.uga.edu/index.html">van der Knaap lab</a> working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.</p>
+<p>I am <strong>Manoj Sapkota</strong>, a PhD candidate in the <a href="https://plantbreeding.caes.uga.edu/">Institute of Plant Breeding, Genetics, and Genomics</a> at the University of Georgia, Athens, GA, US. I am a member of <a href="https://vanderknaaplab.uga.edu/index.html">van der Knaap lab</a> working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.</p>
 <h2 id="education">Education</h2>
 <p><strong>University of Georgia (UGA), Athens, GA, USA</strong></p>
 <p><em>Ph.D</em>., Plant Breeding, Genetics and Genomics, Institute of Plant Breeding, Genetics and Genomics (IPBGG); Expected: Spring 2023</p>
