--- a/publications/index.html
+++ b/publications/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="">
 <meta name="description" content="My Publications You can also check my Google Scholar Profile.
-2022 Barnett, J., Buonauro, G., Kuipers, A., Sapkota, M., van der Knaap, E., &amp;amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story. Systematic Botany. In press, accepted in volume 47 issue 4 (October-December 2022) https://www.biorxiv.org/content/10.1101/2022.02.11.480156v2.full
-Thapa, D.B., Subedi, M., Yadav, R.P., Joshi, B.P., Adhikari, B.N., Shrestha, K.P., Magar, P.B., Pant, K.R., Gurung, S." />
+2022 Frick, E.M., Sapkota, M., Pereira Garcia, L., Wang, Y., Hermanns, A., Giovannoni, J.J., van der Knaap, E., Tieman, D.M. and Klee, H.J., 2022. A family of methyl esterases converts methyl salicylate to salicylic acid in ripening tomato fruit. Plant Physiology https://academic.oup.com/plphys/advance-article-abstract/doi/10.1093/plphys/kiac509/6782970
+Barnett, J., Buonauro, G., Kuipers, A., Sapkota, M., van der Knaap, E., &amp;amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story." />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
@@ -42,23 +42,23 @@ Thapa, D.B., Subedi, M., Yadav, R.P., Joshi, B.P., Adhikari, B.N., Shrestha, K.P
 
 <meta itemprop="name" content="Publications">
 <meta itemprop="description" content="My Publications You can also check my Google Scholar Profile.
-2022 Barnett, J., Buonauro, G., Kuipers, A., Sapkota, M., van der Knaap, E., &amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story. Systematic Botany. In press, accepted in volume 47 issue 4 (October-December 2022) https://www.biorxiv.org/content/10.1101/2022.02.11.480156v2.full
-Thapa, D.B., Subedi, M., Yadav, R.P., Joshi, B.P., Adhikari, B.N., Shrestha, K.P., Magar, P.B., Pant, K.R., Gurung, S.">
+2022 Frick, E.M., Sapkota, M., Pereira Garcia, L., Wang, Y., Hermanns, A., Giovannoni, J.J., van der Knaap, E., Tieman, D.M. and Klee, H.J., 2022. A family of methyl esterases converts methyl salicylate to salicylic acid in ripening tomato fruit. Plant Physiology https://academic.oup.com/plphys/advance-article-abstract/doi/10.1093/plphys/kiac509/6782970
+Barnett, J., Buonauro, G., Kuipers, A., Sapkota, M., van der Knaap, E., &amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story.">
 
-<meta itemprop="wordCount" content="564">
+<meta itemprop="wordCount" content="605">
 <meta itemprop="keywords" content="" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Publications"/>
 <meta name="twitter:description" content="My Publications You can also check my Google Scholar Profile.
-2022 Barnett, J., Buonauro, G., Kuipers, A., Sapkota, M., van der Knaap, E., &amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story. Systematic Botany. In press, accepted in volume 47 issue 4 (October-December 2022) https://www.biorxiv.org/content/10.1101/2022.02.11.480156v2.full
-Thapa, D.B., Subedi, M., Yadav, R.P., Joshi, B.P., Adhikari, B.N., Shrestha, K.P., Magar, P.B., Pant, K.R., Gurung, S."/>
+2022 Frick, E.M., Sapkota, M., Pereira Garcia, L., Wang, Y., Hermanns, A., Giovannoni, J.J., van der Knaap, E., Tieman, D.M. and Klee, H.J., 2022. A family of methyl esterases converts methyl salicylate to salicylic acid in ripening tomato fruit. Plant Physiology https://academic.oup.com/plphys/advance-article-abstract/doi/10.1093/plphys/kiac509/6782970
+Barnett, J., Buonauro, G., Kuipers, A., Sapkota, M., van der Knaap, E., &amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story."/>
 
 
 
     <meta property="og:title" content="Publications" />
 <meta property="og:description" content="My Publications You can also check my Google Scholar Profile.
-2022 Barnett, J., Buonauro, G., Kuipers, A., Sapkota, M., van der Knaap, E., &amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story. Systematic Botany. In press, accepted in volume 47 issue 4 (October-December 2022) https://www.biorxiv.org/content/10.1101/2022.02.11.480156v2.full
-Thapa, D.B., Subedi, M., Yadav, R.P., Joshi, B.P., Adhikari, B.N., Shrestha, K.P., Magar, P.B., Pant, K.R., Gurung, S." />
+2022 Frick, E.M., Sapkota, M., Pereira Garcia, L., Wang, Y., Hermanns, A., Giovannoni, J.J., van der Knaap, E., Tieman, D.M. and Klee, H.J., 2022. A family of methyl esterases converts methyl salicylate to salicylic acid in ripening tomato fruit. Plant Physiology https://academic.oup.com/plphys/advance-article-abstract/doi/10.1093/plphys/kiac509/6782970
+Barnett, J., Buonauro, G., Kuipers, A., Sapkota, M., van der Knaap, E., &amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://manojsapkota.github.io/publications/" /><meta property="article:section" content="" />
 
@@ -147,19 +147,21 @@ Thapa, D.B., Subedi, M., Yadav, R.P., Joshi, B.P., Adhikari, B.N., Shrestha, K.P
                 <h2 id="my-publications"><strong>My Publications</strong></h2>
 <p>You can also check my <strong><a href="https://scholar.google.com/citations?hl=en&amp;user=-P4GI_QAAAAJ">Google Scholar Profile</a>.</strong></p>
 <h3 id="2022"><strong>2022</strong></h3>
-<p>Barnett, J., Buonauro, G., Kuipers, A., <strong>Sapkota, M.</strong>, van der Knaap, E., &amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story. Systematic Botany. In press, accepted in volume 47 issue 4 (October-December 2022)
+<p>Frick, E.M., <strong>Sapkota, M.</strong>, Pereira Garcia, L., Wang, Y., Hermanns, A., Giovannoni, J.J., van der Knaap, E., Tieman, D.M. and Klee, H.J., 2022. A family of methyl esterases converts methyl salicylate to salicylic acid in ripening tomato fruit. <em>Plant Physiology</em>
+<a href="https://academic.oup.com/plphys/advance-article-abstract/doi/10.1093/plphys/kiac509/6782970">https://academic.oup.com/plphys/advance-article-abstract/doi/10.1093/plphys/kiac509/6782970</a></p>
+<p>Barnett, J., Buonauro, G., Kuipers, A., <strong>Sapkota, M.</strong>, van der Knaap, E., &amp; Razifard, H. 2022. Genomic characterization of a wild-like tomato accession found in Arizona; a northward migration story. <em>Systematic Botany</em>. In press, accepted in volume 47 issue 4 (October-December 2022)
 <a href="https://www.biorxiv.org/content/10.1101/2022.02.11.480156v2.full">https://www.biorxiv.org/content/10.1101/2022.02.11.480156v2.full</a></p>
-<p>Thapa, D.B., Subedi, M., Yadav, R.P., Joshi, B.P., Adhikari, B.N., Shrestha, K.P., Magar, P.B., Pant, K.R., Gurung, S.B., Ghimire, S., Gautam, N.R., Acharya, N.R., <strong>Sapkota, M.</strong>, Mishra, V.K., Joshi, A.K., Singh, R.P., and Govindan, V. 2022. Variation in Grain Zinc and Iron Concentrations, Grain Yield and Associated Traits of Biofortified Wheat Genotypes in Nepal. Frontiers in Plant Science, 13:881965. doi:10.3389/fpls.2022.881965
+<p>Thapa, D.B., Subedi, M., Yadav, R.P., Joshi, B.P., Adhikari, B.N., Shrestha, K.P., Magar, P.B., Pant, K.R., Gurung, S.B., Ghimire, S., Gautam, N.R., Acharya, N.R., <strong>Sapkota, M.</strong>, Mishra, V.K., Joshi, A.K., Singh, R.P., and Govindan, V. 2022. Variation in Grain Zinc and Iron Concentrations, Grain Yield and Associated Traits of Biofortified Wheat Genotypes in Nepal. <em>Frontiers in Plant Science</em>, 13:881965. doi:10.3389/fpls.2022.881965
 <a href="https://www.frontiersin.org/articles/10.3389/fpls.2022.881965/full">https://www.frontiersin.org/articles/10.3389/fpls.2022.881965/full</a></p>
 <h3 id="2021"><strong>2021</strong></h3>
-<p>Pereira, L., Zhang, L., <strong>Sapkota, M.</strong>, Ramos, A., Razifard, H., Caicedo, A.L. and van der Knaap, E., 2021. Unraveling the genetics of tomato fruit weight during crop domestication and diversification. Theoretical and Applied Genetics, 134(10), pp.3363-3378.
+<p>Pereira, L., Zhang, L., <strong>Sapkota, M.</strong>, Ramos, A., Razifard, H., Caicedo, A.L. and van der Knaap, E., 2021. Unraveling the genetics of tomato fruit weight during crop domestication and diversification. <em>Theoretical and Applied Genetics</em>, 134(10), pp.3363-3378.
 <a href="https://link.springer.com/content/pdf/10.1007/s00122-021-03902-2.pdf">https://link.springer.com/content/pdf/10.1007/s00122-021-03902-2.pdf</a></p>
-<p>Topcu, Y., <strong>Sapkota, M.</strong>, Illa-Berenguer, E., Nambeesan, S.U. and van der Knaap, E., 2021. Identification of blossom-end rot loci using joint QTL-seq and linkage-based QTL mapping in tomato. Theoretical and Applied Genetics, pp.1-15.
+<p>Topcu, Y., <strong>Sapkota, M.</strong>, Illa-Berenguer, E., Nambeesan, S.U. and van der Knaap, E., 2021. Identification of blossom-end rot loci using joint QTL-seq and linkage-based QTL mapping in tomato. <em>Theoretical and Applied Genetics</em>, pp.1-15.
 <a href="https://link.springer.com/content/pdf/10.1007/s00122-021-03869-0.pdf">https://link.springer.com/content/pdf/10.1007/s00122-021-03869-0.pdf</a></p>
-<p>Pereira, L., <strong>Sapkota, M.</strong>, Alonge, M., Zheng, Y., Zhang, Y., Razifard, H., Taitano, N.K., Schatz, M., Fernie, A., Wang, Y. and Fei, Z., 2021. Natural genetic diversity in tomato flavor genes. Frontiers in plant science, 12, p.914.
+<p>Pereira, L., <strong>Sapkota, M.</strong>, Alonge, M., Zheng, Y., Zhang, Y., Razifard, H., Taitano, N.K., Schatz, M., Fernie, A., Wang, Y. and Fei, Z., 2021. Natural genetic diversity in tomato flavor genes. <em>Frontiers in plant science</em>, 12, p.914.
 <a href="https://www.frontiersin.org/articles/10.3389/fpls.2021.642828/full">https://www.frontiersin.org/articles/10.3389/fpls.2021.642828/full</a></p>
 <h3 id="2020"><strong>2020</strong></h3>
-<p>Li Q., <strong>Sapkota M.</strong>, and van der Knaap E. 2020. Perspectives of CRISPR/Cas-mediated cis-engineering in horticulture: unlocking the neglected potential for crop improvement. Horticulture research, 7(1), 1-11.
+<p>Li Q., <strong>Sapkota M.</strong>, and van der Knaap E. 2020. Perspectives of CRISPR/Cas-mediated cis-engineering in horticulture: unlocking the neglected potential for crop improvement. <em>Horticulture research</em>, 7(1), 1-11.
 <a href="https://www.nature.com/articles/s41438-020-0258-8">https://www.nature.com/articles/s41438-020-0258-8</a></p>
 <h3 id="2018"><strong>2018</strong></h3>
 <p>Shahi, D., Ghimire, S.K., Ojha, B.R., Bhatta, M.R., Rasaily, S., Rauniyar, D.R. and <strong>Sapkota, M.</strong>, 2018. Evaluation of variability and genetic parameters for yield and yield-attributing traits in spring wheat (<em>Triticum aestivum</em> L.). Nepalese Journal of Agricultural Sciences 2018, volume 17, p.134.
