--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="http://manojsapkota.github.io/404.html" />
+<link rel="canonical" href="http://manoj34sapkota.github.io/404.html" />
 
 
     <title>
@@ -49,7 +49,7 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Manoj Sapkota" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://manojsapkota.github.io/404.html" /><meta property="og:site_name" content="Manoj Sapkota" />
+<meta property="og:url" content="http://manoj34sapkota.github.io/404.html" /><meta property="og:site_name" content="Manoj Sapkota" />
 
 
 
@@ -124,9 +124,9 @@
             <h1>404</h1>
             <p>Oops, page not found…</p>
             <p class="btn-404">
-                <a href="http://manojsapkota.github.io">
+                <a href="http://manoj34sapkota.github.io">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-                <a href="http://manojsapkota.github.io/posts">
+                <a href="http://manoj34sapkota.github.io/posts">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archives</a>
             </p>
         </div>
@@ -139,10 +139,10 @@
     
     <div class="footer__inner">
         <div class="footer__content">
-            <span>&copy; 2022</span>
-            <span><a href="http://manojsapkota.github.io"></a></span>
+            <span>&copy; 2023</span>
+            <span><a href="http://manoj34sapkota.github.io"></a></span>
             <span>Manoj Sapkota</span>
-            <span><a href="http://manojsapkota.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
+            <span><a href="http://manoj34sapkota.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
             
         </div>
     </div>
