--- a/series/index.html
+++ b/series/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="http://manoj34sapkota.github.io/series/" />
+<link rel="canonical" href="http://manojsapkota.github.io/series/" />
 
 
     <title>
@@ -49,7 +49,7 @@
     <meta property="og:title" content="Series" />
 <meta property="og:description" content="Manoj Sapkota" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://manoj34sapkota.github.io/series/" /><meta property="og:site_name" content="Manoj Sapkota" />
+<meta property="og:url" content="http://manojsapkota.github.io/series/" /><meta property="og:site_name" content="Manoj Sapkota" />
 
 
 
@@ -59,7 +59,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="http://manoj34sapkota.github.io/series/index.xml" title="Manoj Sapkota" />
+<link rel="alternate" type="application/rss+xml" href="http://manojsapkota.github.io/series/index.xml" title="Manoj Sapkota" />
 
 
 
@@ -142,9 +142,9 @@
     <div class="footer__inner">
         <div class="footer__content">
             <span>&copy; 2023</span>
-            <span><a href="http://manoj34sapkota.github.io"></a></span>
+            <span><a href="http://manojsapkota.github.io"></a></span>
             <span>Manoj Sapkota</span>
-            <span><a href="http://manoj34sapkota.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
+            <span><a href="http://manojsapkota.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
             
         </div>
     </div>
