--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="">
-<meta name="description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georgia, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD." />
+<meta name="description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects." />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
@@ -14,7 +14,7 @@
 
     <title>
         
-            About me :: Manoj Sapkota  — A PhD candidate at van der Knaap Lab, UGA
+            About me :: Manoj Sapkota  — Genomics Postdoc at Breeding Insight, Cornell University
         
     </title>
 
@@ -39,18 +39,18 @@
 
 
 <meta itemprop="name" content="About me">
-<meta itemprop="description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georgia, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.">
+<meta itemprop="description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects.">
 
-<meta itemprop="wordCount" content="854">
+<meta itemprop="wordCount" content="1080">
 <meta itemprop="keywords" content="" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About me"/>
-<meta name="twitter:description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georgia, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD."/>
+<meta name="twitter:description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects."/>
 
 
 
     <meta property="og:title" content="About me" />
-<meta property="og:description" content="I am Manoj Sapkota, a PhD candidate in the Institute of Plant Breeding, Genetics, and Genomics at the University of Georgia, Athens, GA, US. I am a member of van der Knaap lab working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD." />
+<meta property="og:description" content="I am Manoj Sapkota, Genomics Postdoc at Breeding Insight in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://manojsapkota.github.io/hobbies/" /><meta property="article:section" content="" />
 
@@ -140,7 +140,9 @@
          alt="banner" width="100%"/>
 </figure>
 
-<p>I am <strong>Manoj Sapkota</strong>, a PhD candidate in the <a href="https://plantbreeding.caes.uga.edu/">Institute of Plant Breeding, Genetics, and Genomics</a> at the University of Georgia, Athens, GA, US. I am a member of <a href="https://vanderknaaplab.uga.edu/index.html">van der Knaap lab</a> working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.</p>
+<p>I am <strong>Manoj Sapkota</strong>, Genomics Postdoc at <a href="https://breedinginsight.org/">Breeding Insight</a> in Cornell University. I am passionate about plant breeding, genetics and bioinformatics. I call myself a grounded and solution-oriented plant scientist with wide variety of research experiences. I possess 5 plus years of experience in bioinformatics, statistics, plant breeding, traditional gene cloning, QTL mapping, molecular cloning, and gene editing. I am adept at motivating self and others. I am also highly organized, detail oriented and capable of taking leadership role to carry out assigned projects. I call myself an excellent team player and believe that we can achieve huge success working together. I am known as being very helpful and versatile among my colleagues.</p>
+<p>In my current role, I collaborate with USDA breeders working on specialty crops like alfalfa, lettuce, blueberry, and cucumber in projects related to exploring genetic diversity, QTL mapping, GWAS and Genomic selections. Additionally, I perform genomic and bioinformatics analysis to help breeders develop breeding strategies and prepare reports, manuscripts, and presentations to share research results and findings.</p>
+<p>Previously, I was a PhD student in the <a href="https://plantbreeding.caes.uga.edu/">Institute of Plant Breeding, Genetics, and Genomics</a> at the University of Georgia, Athens, GA, US and a member of <a href="https://vanderknaaplab.uga.edu/index.html">van der Knaap lab</a> working under the supervision of Dr. Esther van der Knaap. I am originally from Nepal. I did my undergrad in the Institute of Agriculture and Animal Sciences at the Tribhuvan University, Rampur, Chitwan, Nepal. I had also worked as a Reserch Technician at International Maize and Wheat Improvement Centre (CIMMYT), Nepal before I came to UGA to pursue my PhD.</p>
 <h2 id="education">Education</h2>
 <p><strong>University of Georgia (UGA), Athens, GA, USA</strong></p>
 <p><em>Ph.D</em>., Plant Breeding, Genetics and Genomics, Institute of Plant Breeding, Genetics and Genomics (IPBGG); 2023</p>
@@ -186,8 +188,11 @@ Major in Plant Breeding, 2016</p>
 <li>Microscopy, imaging and image analysis</li>
 </ul>
 <h2 id="research-experience">Research Experience</h2>
+<p><strong>Genomics Postdoc</strong>
+Breeding Insight, Cornell University, Ithaca, New York US; July 2023 to present
+<em>Supervisor: Dr. Dongyan Zhao</em></p>
 <p><strong>Graduate Research Assistant</strong></p>
-<p>Institute of Plant Breeding, Genetics, and Genomics, University of Georgia, Athens, Georgia, US; August 2017 - Present;
+<p>Institute of Plant Breeding, Genetics, and Genomics, University of Georgia, Athens, Georgia, US; August 2017 - June 2023;
 <em>Supervisor: Dr. Esther van der Knaap</em></p>
 <p><strong>Research Technician</strong></p>
 <p>International Maize and Wheat Improvement Centre (CIMMYT), Nepal; November 2016-June 2017;
@@ -195,26 +200,21 @@ Major in Plant Breeding, 2016</p>
 <p><strong>Research Intern</strong></p>
 <p>Wheat Breeding Unit, Agriculture and Botany Division, Nepal Agriculture Research Council, Nepal; April 2016 – November 2016;
 <em>Supervisor: Dr. Dhruba Bahadur Thapa</em></p>
-<h2 id="projects">Projects</h2>
-<ul>
-<li>Identification of novel loci underlying fruit weight in tomatoes</li>
-<li>Identification and cloning of novel loci associated with fruit methyl salicylate levels in tomatoes</li>
-<li>Genetic characterization, haplotype analysis and evolution of METHYLESTERASE and NON-SMOKY GLUCOSYL TRANSFERASE1 in red-fruited tomato</li>
-<li>Genome-wide association and Genotype by sequencing mapping for volatiles contributing to tomato flavor</li>
-</ul>
 <p><strong>You can find more information in my CV <a href="/pdf/CV.pdf">here</a>.</strong></p>
 <p>Here are some other things about me:</p>
 <h2 id="my-family"><strong>My family</strong></h2>
-<figure><img src="/img/family.jpg"
+<figure><img src="/img/family_cropped.jpg"
          alt="banner" width="100%"/>
 </figure>
 
-<h2 id="my-labhttpsvanderknaaplabugaeduindexhtml"><a href="https://vanderknaaplab.uga.edu/index.html"><strong>My lab</strong></a></h2>
+<h2 id="my-labhttpsbreedinginsightorgteam"><a href="https://breedinginsight.org/team/"><strong>My lab</strong></a></h2>
+<p>Currently, I am Genomics Postdoc at <a href="https://breedinginsight.org/">Breeding Insight</a> at Cornell University working with an amazing <a href="https://breedinginsight.org/team/">team</a>. I am supervised by Dr. Dongyan Zhao and Dr. Moira Sheehan. At Breeding Insight, we level the playing field for routine use of genomics insights, creating new opportunities for specialty breeders to adopt tools, technologies and methods from basic research. We integrate phenomics (trait analysis), genomics (genotypic data), data management, and software tools to help breeders increase rates of genetic gain, which results in more healthy, nutritious, and sustainable food for consumers.</p>
+<h2 id="my-previous-labhttpsvanderknaaplabugaeduindexhtml"><a href="https://vanderknaaplab.uga.edu/index.html"><strong>My previous lab</strong></a></h2>
 <p><a href="https://vanderknaaplab.uga.edu/index.html"><figure><img src="/img/lab.jpg"
          alt="banner" width="100%"/>
 </figure>
 </a>
-Currently I am a member of <a href="https://vanderknaaplab.uga.edu/index.html">van der Knaap lab</a> at the UGA. I am supervised by Dr. Esther van der Knaap. The lab works on exploring the genetics behind fruit and floral organ development. My research work focuses on identifying and characterizing novel loci associated with tomato fruit size and flavor volatiles.</p>
+Previously, I was a member of <a href="https://vanderknaaplab.uga.edu/index.html">van der Knaap lab</a> at the UGA. I am supervised by Dr. Esther van der Knaap. The lab works on exploring the genetics behind fruit and floral organ development. My research work focused on identifying and characterizing novel loci associated with tomato fruit size and flavor volatiles.</p>
 <h2 id="science-communicationhttpssciencemanojtumblrcom"><a href="https://sciencemanoj.tumblr.com"><strong>Science communication</strong></a></h2>
 <p>I like to communicate my science whenever I get an opportunity. I believe science is nothing without communication. I have participated in several conferences, events and competitions and presented my work (both virtual and in person). You can go through some of my posters and my recorded research talks here in my <a href="https://sciencemanoj.tumblr.com"><strong>science blog.</strong></a>
 <a href="https://sciencemanoj.tumblr.com"><figure><img src="/img/science.jpg"
