--- a/publications/index.html
+++ b/publications/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="author" content="">
 <meta name="description" content="My Publications You can also check my Google Scholar Profile.
-2023 Sapkota, M., Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E., 2023. Structural variation underlies functional diversity at methyl salicylate loci in tomato. PLOS Genetics, In press
-Zhang, B., Li, Q., Keyhaninejad, N., Taitano, N., Sapkota, M., Snouffer, A. and van der Knaap, E., 2023. A combinatorial TRM‐OFP module bilaterally fine‐tunes tomato fruit shape." />
+2023 Li Q., Luo S., Zhang L., Feng Q., Song L., Sapkota, M., Xuan S., Wang Y., Zhao J., van der Knaap, E., Chen X. and Shen S. 2023. Molecular and genetic regulation of fleshy fruit shape and lessons from Arabidopsis and rice. Horticulture Research. https://doi.org/10.1093/hr/uhad108
+Sapkota, M., Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E." />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
@@ -16,7 +16,7 @@ Zhang, B., Li, Q., Keyhaninejad, N., Taitano, N., Sapkota, M., Snouffer, A. and 
 
     <title>
         
-            Publications :: Manoj Sapkota  — A PhD candidate at van der Knaap Lab, UGA
+            Publications :: Manoj Sapkota  — Genomics Postdoc at Breeding Insight, Cornell University
         
     </title>
 
@@ -42,23 +42,23 @@ Zhang, B., Li, Q., Keyhaninejad, N., Taitano, N., Sapkota, M., Snouffer, A. and 
 
 <meta itemprop="name" content="Publications">
 <meta itemprop="description" content="My Publications You can also check my Google Scholar Profile.
-2023 Sapkota, M., Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E., 2023. Structural variation underlies functional diversity at methyl salicylate loci in tomato. PLOS Genetics, In press
-Zhang, B., Li, Q., Keyhaninejad, N., Taitano, N., Sapkota, M., Snouffer, A. and van der Knaap, E., 2023. A combinatorial TRM‐OFP module bilaterally fine‐tunes tomato fruit shape.">
+2023 Li Q., Luo S., Zhang L., Feng Q., Song L., Sapkota, M., Xuan S., Wang Y., Zhao J., van der Knaap, E., Chen X. and Shen S. 2023. Molecular and genetic regulation of fleshy fruit shape and lessons from Arabidopsis and rice. Horticulture Research. https://doi.org/10.1093/hr/uhad108
+Sapkota, M., Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E.">
 
-<meta itemprop="wordCount" content="669">
+<meta itemprop="wordCount" content="713">
 <meta itemprop="keywords" content="" />
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Publications"/>
 <meta name="twitter:description" content="My Publications You can also check my Google Scholar Profile.
-2023 Sapkota, M., Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E., 2023. Structural variation underlies functional diversity at methyl salicylate loci in tomato. PLOS Genetics, In press
-Zhang, B., Li, Q., Keyhaninejad, N., Taitano, N., Sapkota, M., Snouffer, A. and van der Knaap, E., 2023. A combinatorial TRM‐OFP module bilaterally fine‐tunes tomato fruit shape."/>
+2023 Li Q., Luo S., Zhang L., Feng Q., Song L., Sapkota, M., Xuan S., Wang Y., Zhao J., van der Knaap, E., Chen X. and Shen S. 2023. Molecular and genetic regulation of fleshy fruit shape and lessons from Arabidopsis and rice. Horticulture Research. https://doi.org/10.1093/hr/uhad108
+Sapkota, M., Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E."/>
 
 
 
     <meta property="og:title" content="Publications" />
 <meta property="og:description" content="My Publications You can also check my Google Scholar Profile.
-2023 Sapkota, M., Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E., 2023. Structural variation underlies functional diversity at methyl salicylate loci in tomato. PLOS Genetics, In press
-Zhang, B., Li, Q., Keyhaninejad, N., Taitano, N., Sapkota, M., Snouffer, A. and van der Knaap, E., 2023. A combinatorial TRM‐OFP module bilaterally fine‐tunes tomato fruit shape." />
+2023 Li Q., Luo S., Zhang L., Feng Q., Song L., Sapkota, M., Xuan S., Wang Y., Zhao J., van der Knaap, E., Chen X. and Shen S. 2023. Molecular and genetic regulation of fleshy fruit shape and lessons from Arabidopsis and rice. Horticulture Research. https://doi.org/10.1093/hr/uhad108
+Sapkota, M., Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://manojsapkota.github.io/publications/" /><meta property="article:section" content="" />
 
@@ -147,7 +147,10 @@ Zhang, B., Li, Q., Keyhaninejad, N., Taitano, N., Sapkota, M., Snouffer, A. and 
                 <h2 id="my-publications"><strong>My Publications</strong></h2>
 <p>You can also check my <strong><a href="https://scholar.google.com/citations?hl=en&amp;user=-P4GI_QAAAAJ">Google Scholar Profile</a>.</strong></p>
 <h3 id="2023"><strong>2023</strong></h3>
-<p><strong>Sapkota, M.</strong>, Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E., 2023. Structural variation underlies functional diversity at methyl salicylate loci in tomato. <em>PLOS Genetics</em>, In press</p>
+<p>Li Q., Luo S., Zhang L., Feng Q., Song L., <strong>Sapkota, M.</strong>, Xuan S., Wang Y., Zhao J., van der Knaap, E., Chen X. and Shen S. 2023. Molecular and genetic regulation of fleshy fruit shape and lessons from Arabidopsis and rice. <em>Horticulture Research</em>.
+<a href="https://doi.org/10.1093/hr/uhad108">https://doi.org/10.1093/hr/uhad108</a></p>
+<p><strong>Sapkota, M.</strong>, Pereira, L., Wang, Y., Zhang, L., Topcu, Y., Tieman, D. and van der knaap, E., 2023. Structural variation underlies functional diversity at methyl salicylate loci in tomato. <em>PLOS Genetics</em>.
+<a href="https://doi.org/10.1371/journal.pgen.1010751">https://doi.org/10.1371/journal.pgen.1010751</a></p>
 <p>Zhang, B., Li, Q., Keyhaninejad, N., Taitano, N., <strong>Sapkota, M.</strong>, Snouffer, A. and van der Knaap, E., 2023. A combinatorial TRM‐OFP module bilaterally fine‐tunes tomato fruit shape. <em>New Phytologist</em>.
 <a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.18855">https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.18855</a></p>
 <p>Frick, E.M., <strong>Sapkota, M.</strong>, Pereira Garcia, L., Wang, Y., Hermanns, A., Giovannoni, J.J., van der Knaap, E., Tieman, D.M. and Klee, H.J., 2023. A family of methyl esterases converts methyl salicylate to salicylic acid in ripening tomato fruit. <em>Plant Physiology</em>
